--- a/myfilms/package.json
+++ b/myfilms/package.json
@@ -13,10 +13,13 @@
     "@react-navigation/stack": "^5.2.10",
     "axios": "^0.19.2",
     "expo": "^37.0.6",
+    "expo-font": "^8.1.1",
     "expo-updates": "~0.1.0",
+    "native-base": "2.13.8",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.5",
+    "react-native-dotenv": "^0.2.0",
     "react-native-fade-in-view": "^1.0.6",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.7.1",
